Fixes overflow on x axis

--- a/packages/metaljs.com/src/public/styles/_home.scss
+++ b/packages/metaljs.com/src/public/styles/_home.scss
@@ -98,7 +98,6 @@
 
 .architecture {
 	background: rgba($secondaryColor, 0.05);
-	overflow: hidden;
 }
 
 .architecture-title {
