--- a/packages/metaljs.com/src/public/styles/main.scss
+++ b/packages/metaljs.com/src/public/styles/main.scss
@@ -29,6 +29,10 @@ body {
 	text-size-adjust: 100%;
 }
 
+html, body {
+	overflow-x: hidden;
+}
+
 @mixin anim($property) {
 	transition: $property .3s ease-in-out;
 }
